--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>
-            Documentation Page
-        </title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-       <div class="borde    r">
-        Heading 1
-       </div>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>
+        Documentation Page
+    </title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <nav id="navbar">
+        <header>
+            Html Documentation
+        </header>
+        <ul>
+
+        </ul>
+    </nav>
+    <main id="main-doc">
+        <section class="main-section">
+            <header>
+                <h1 class="head">
+                    Hyper Text markup langauge
+                </h1>
+            </header>
+            <p>
+                HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the
+                meaning and structure of web content. Other technologies besides HTML are generally used to
+                describe a web page's appearance/presentation (CSS) or functionality/behavior (JavaScript).
+            </p>
+            <p>
+                "Hypertext" refers to links that connect web pages to one another, either within a single
+                website or between websites. Links are a fundamental aspect of the Web. By uploading content to
+                the Internet and linking it to pages created by other people, you become an active participant
+                in the World Wide Web.
+                HTML uses "markup" to annotate text, images, and other content for display in a Web browser.
+                HTML markup includes special "elements" such as :
+            </p>
+            <div class="codebox">
+                <code>
+                            &lt;head&gt;, &lt;title&gt;, &lt;body&gt;, &lt;header&gt;, &lt;footer&gt;, &lt;article&gt;, &lt;section&gt;, &lt;p&gt;, &lt;div&gt;, &lt;span&gt;, &lt;img&gt;, &lt;aside&gt;, &lt;audio&gt;, &lt;canvas&gt;, &lt;datalist&gt;, &lt;details&gt;, &lt;embed&gt;, &lt;nav&gt;, &lt;search&gt;, &lt;output&gt;, &lt;progress&gt;, &lt;video&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt; 
+                        </code>
+            </div>
+    </main>
+    <!-- okay -->
+</body>
+
 </html>
