problems with @media rules will try again

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -14,39 +14,64 @@
 <body>
     <nav id="navbar">
         <header>
-            Html Documentation
+            Lorem Ipsum Documentation
         </header>
         <ul>
-
+            <li>
+                <a href=#what>
+                    What is Lorem Ipsum?
+                </a>
+            </li>
         </ul>
     </nav>
+
     <main id="main-doc">
-        <section class="main-section">
+        <section class="main-section" id="what">
             <header>
                 <h1 class="head">
-                    Hyper Text markup langauge
+                    What is Lorem Ipsum?
                 </h1>
             </header>
-            <p>
-                HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the
-                meaning and structure of web content. Other technologies besides HTML are generally used to
-                describe a web page's appearance/presentation (CSS) or functionality/behavior (JavaScript).
-            </p>
-            <p>
-                "Hypertext" refers to links that connect web pages to one another, either within a single
-                website or between websites. Links are a fundamental aspect of the Web. By uploading content to
-                the Internet and linking it to pages created by other people, you become an active participant
-                in the World Wide Web.
-                HTML uses "markup" to annotate text, images, and other content for display in a Web browser.
-                HTML markup includes special "elements" such as :
-            </p>
-            <div class="codebox">
-                <code>
-                            &lt;head&gt;, &lt;title&gt;, &lt;body&gt;, &lt;header&gt;, &lt;footer&gt;, &lt;article&gt;, &lt;section&gt;, &lt;p&gt;, &lt;div&gt;, &lt;span&gt;, &lt;img&gt;, &lt;aside&gt;, &lt;audio&gt;, &lt;canvas&gt;, &lt;datalist&gt;, &lt;details&gt;, &lt;embed&gt;, &lt;nav&gt;, &lt;search&gt;, &lt;output&gt;, &lt;progress&gt;, &lt;video&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt; 
-                        </code>
-            </div>
+            <article>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <ul>
+                    <li>
+                        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+                        "There is no one who loves pain itself, who seeks after it and wants to have it, simply because
+                        it is pain..."
+                    </li>
+                    <li>
+                        Nullam et erat vel justo tincidunt posuere vel vel orci.
+                        Aliquam sit amet urna in lacus tempor vulputate vel at nulla.
+                    </li>
+                    <li>
+                        Donec vitae neque vitae orci ultricies ultrices.
+                        Nulla rutrum augue at turpis sollicitudin luctus et vel felis.
+                    </li>
+                </ul>
+                <p>
+                    "Hypertext" refers to links that connect web pages to one another, either within a single
+                    website or between websites. Links are a fundamental aspect of the Web. By uploading content to
+                    the Internet and linking it to pages created by other people, you become an active participant
+                    in the World Wide Web.
+                    HTML uses "markup" to annotate text, images, and other content for display in a Web browser.
+                    HTML markup includes special "elements" such as :
+                </p>
+                <div class="codebox">
+                    <code>
+                        &lt;head&gt;, &lt;title&gt;, &lt;body&gt;, &lt;header&gt;, &lt;footer&gt;,lt;article&gt;, &lt;section&gt;, &lt;p&gt;, &lt;div&gt;, &lt;span&gt;, &limg&gt;, &lt;aside&gt;, &lt;audio&gt;, &lt;canvas&gt;, &lt;datalist&gt;, &ldetails&gt;, &lt;embed&gt;, &lt;nav&gt;, &lt;search&gt;, &lt;output&gt;, &lprogress&gt;, &lt;video&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt; 
+                    </code>
+                </div>
+
+            </article>
     </main>
-    <!-- okay -->
 </body>
 
 </html>
