--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>
+        Time Travel Forum
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="page">
+        <div class="topbar">
+            <header id="header">
+                <img src="logo.png" alt="Logo" width="60vw" id="header-img">
+                Delorean
+            </header>
+            <nav class="nav-bar">
+                <ul class="list">
+                    <li>
+                        Know-More
+                    </li>
+                    <li>
+                        How does it work?
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</body>
+
 </html>
