--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -11,23 +11,40 @@
 </head>
 
 <body>
-    <div class="page">
+    <!-- <div class="page">
         <div class="topbar">
             <header id="header">
                 <img src="logo.png" alt="Logo" width="60vw" id="header-img">
                 Delorean
             </header>
             <nav class="nav-bar">
-                <ul class="list">
-                    <li>
+                <ul >
+                    <li class="list">
                         Know-More
                     </li>
-                    <li>
+                    <li class="list">
                         How does it work?
                     </li>
                 </ul>
             </nav>
         </div>
+    </div> -->
+
+    <div class="topbar">
+        <header id="header">
+            <img src="logo.png" alt="logo" id="header-img">
+            Delorean
+        </header>
+        <nav class="nav-bar">
+            <ul class="list">
+                <li>
+                    option1
+                </li>
+                <li>
+                    option2
+                </li>
+            </ul>
+        </nav>
     </div>
 </body>
 
