--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <title>
@@ -9,27 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <!-- <div class="page">
-        <div class="topbar">
-            <header id="header">
-                <img src="logo.png" alt="Logo" width="60vw" id="header-img">
-                Delorean
-            </header>
-            <nav class="nav-bar">
-                <ul >
-                    <li class="list">
-                        Know-More
-                    </li>
-                    <li class="list">
-                        How does it work?
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div> -->
-
     <div class="topbar">
         <header id="header">
             <img src="logo.png" alt="logo" id="header-img">
@@ -37,15 +16,16 @@
         </header>
         <nav class="nav-bar">
             <ul class="list">
-                <li>
+                <li class="item">
                     option1
                 </li>
-                <li>
+                <li class="item">
                     option2
                 </li>
             </ul>
         </nav>
     </div>
+
 </body>
 
 </html>
