--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>
@@ -8,24 +9,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="topbar">
-        <header id="header">
-            <img src="logo.png" alt="logo" id="header-img">
-            Delorean
-        </header>
-        <nav class="nav-bar">
-            <ul class="list">
-                <li class="item">
-                    option1
+    <header id="header">
+        <div class="logo">
+            <img id="header-img" src="logo.jpg" alt="logo" />
+        </div>
+
+        <nav id="nav-bar">
+            <ul>
+
+                <li>
+                    <a href="#feature" class="nav-link">
+                        Features
+                    </a>
                 </li>
-                <li class="item">
-                    option2
-                </li>
+                <li><a href="" class="nav-link">
+                        How does it work?
+                    </a></li>
+                <li><a href="" class="nav-link">
+                        Pricing
+                    </a></li>
             </ul>
         </nav>
-    </div>
-
+    </header>
+    <section class="feature">
+        <div class="card1">
+            <h2>
+                Most secure way for time travel to date.
+            </h2>
+            <caption>
+                ironically.
+            </caption>
+            <form action="https://www.freecodecamp.com/email-submit" id="form" >
+                <input type="email" id="email" placeholder="Enter your email" required>
+                <input type="button" id="submit" class="btn" >
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
