video i frame is problematic

--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -33,20 +33,73 @@
             </ul>
         </nav>
     </header>
-    <section class="feature">
-        <div class="card1">
+    <div class="card1">
+        <section class="feature" id="feature">
             <h2>
                 Most secure way for time travel to date.
             </h2>
-            <caption>
-                ironically.
-            </caption>
-            <form action="https://www.freecodecamp.com/email-submit" id="form" >
+            <h5>
+                Ironically.
+            </h5>
+            <form action="https://www.freecodecamp.com/email-submit" id="form">
                 <input type="email" id="email" placeholder="Enter your email" required>
-                <input type="button" id="submit" class="btn" >
+                <input id="submit" type="submit" value="Get Started" class="btn">
             </form>
-        </div>
-    </section>
+            <div class="advert">
+                <div class="icon">
+                    <img src="sec.png" alt="securityicon" id="#icon" width="60px" height="60px">
+                </div>
+                <div class="desc">
+                    <h3>
+                        Secure.📸
+                    </h3>
+                    <p>
+                        Our security measures are tighter than a billionaire’s wallet at a charity auction. We’ve got
+                        more lasers and motion sensors than a Bond villain's lair, ensuring no unauthorized time-hopping
+                        goes down.
+                    </p>
+                </div>
+            </div>
+            <div class="advert">
+                <div class="icon">
+                    <img src="supp.png" alt="securityicon" id="#icon" width="60px" height="60px">
+                </div>
+                <div class="desc">
+                    <h3>
+                        Quick Support 🔥
+                    </h3>
+                    <p>
+                        We guarantee you'll survive and thrive in any era—no accidental dino-feeding or medieval plague
+                        outbreaks on our watch! Our support team is like a crack squad of historical superheroes
+                    </p>
+                </div>
+            </div>
+            <div class="advert">
+                <div class="icon">
+                    <img src="stable.png" alt="securityicon" id="#icon" width="60px" height="60px">
+                </div>
+                <div class="desc">
+                    <h3>
+                        Stability🦾
+                    </h3>
+                    <p>
+                        where our time machines are more stable than a monk on Xanax meditating in a storm. Our temporal
+                        tech is rock-solid, built to handle the wildest rides through history without so much as a
+                        hiccup.
+                    </p>
+                </div>
+            </div>
+            <iframe
+            id="video"
+            height="315"
+            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+
+        </section>
+
+    </div>
 </body>
 
 </html>
