looks nice but not responsive enough

--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -18,13 +18,12 @@
 
         <nav id="nav-bar">
             <ul>
-
                 <li>
                     <a href="#feature" class="nav-link">
                         Features
                     </a>
                 </li>
-                <li><a href="" class="nav-link">
+                <li><a href="#how" class="nav-link">
                         How does it work?
                     </a></li>
                 <li><a href="" class="nav-link">
@@ -89,16 +88,38 @@
                     </p>
                 </div>
             </div>
-            <iframe
-            id="video"
-            height="315"
-            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
-            frameborder="0"
-            allowfullscreen
-          ></iframe>
-
         </section>
-
+        <br>
+        <br>
+        <br>
+        <section id="how">
+            <h2>How does it work? (as if u actually believe)</h2>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/OZSm4shR-M4?si=6jJ35jaP2xGW2f3G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <br>
+        <br>
+        <br>
+        <section>
+            <h2>
+                Pricing
+            </h2>
+            <div class="box">
+                <div class="Basic">
+                    <h2>Basic</h2>
+                    <p>$600</p>
+                </div>
+                <div class="Basic">
+                    <h2>Pro</h2>
+                    <p>$900</p>
+                </div>
+                <div class="Basic">
+                    <h2>Max</h2>
+                    <p>$1200</p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
