pricing div done + last notice

--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#how" class="nav-link">
                         How does it work?
                     </a></li>
-                <li><a href="" class="nav-link">
+                <li><a href="#price" class="nav-link">
                         Pricing
                     </a></li>
             </ul>
@@ -95,32 +95,84 @@
         <section id="how">
             <h2>How does it work? (as if u actually believe)</h2>
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/OZSm4shR-M4?si=6jJ35jaP2xGW2f3G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/OZSm4shR-M4?si=6jJ35jaP2xGW2f3G"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
         <br>
         <br>
         <br>
-        <section>
+        <section id="price">
             <h2>
                 Pricing
             </h2>
             <div class="box">
                 <div class="Basic">
                     <h2>Basic</h2>
-                    <p>$600</p>
+                    <p>$999 per journey</p>
+                    <br>
+                    <article>
+                        Alright, cheapskates, listen up! Delorean is offering the Basic Plan for you penny-pinchers who
+                        want to time travel but can't bear to part with more than a thousand bucks. For just $999, you
+                        get a no-frills, one-way ticket to any era—perfect for those of you who think your Instagram
+                        needs a little prehistoric flair.
+                    </article>
                 </div>
                 <div class="Basic">
                     <h2>Pro</h2>
-                    <p>$900</p>
+                    <p>$4,999 per journey</p>
+                    <br>
+                    <article>
+                        Step up your game, you mid-tier plebeians! For $4,999, the Pro Plan is for those of you who’ve
+                        got a bit more cash to burn but are still too stingy to go full luxury. This plan is for the
+                        wannabe time-travelers who want to pretend they have taste without breaking the bank. You'll get
+                        a round-trip ticket and some cushy upgrades, like smoother rides and access to fancier time
+                        periods.
+                    </article>
                 </div>
                 <div class="Basic">
                     <h2>Max</h2>
-                    <p>$1200</p>
+                    <p>$19,999 per journey</p>
+                    <br>
+                    <article>
+                        Welcome to the big leagues, you high-rolling elitists! The Pro Max Plan is for those of you
+                        who’ve got more money than sense and want to flaunt it. At $19,999, this is the platinum package
+                        for time travel aficionados who think the world revolves around their oversized wallets. You get
+                        unlimited jumps in 24 hours, VIP treatment, and access to the swankiest eras—because obviously,
+                        you're too good to mingle with the commoners.
+                    </article>
                 </div>
             </div>
         </section>
+        <section class="rant">
+
+            <h4>
+                Public Notice:
+            </h4>
+            <p>
+                Hey there, DeLorean adventurers! We’ve noticed some of you have been time-traveling straight to our web
+                developers' inboxes with complaints about our site. Sure, our website might load slower than dial-up on
+                a bad day and have more bugs than a Jurassic swamp, but harassing our devs isn’t the answer! They’re
+                working hard to improve it while juggling the complexities of time travel, quantum physics, and keeping
+                our servers from imploding.
+
+                So, cut them some slack! Your fiery emails and cranky comments are only slowing down the process.
+                Instead, how about you grab a coffee, take a deep breath, and trust us—we’ll have things back on track
+                faster than you can say “Einstein-Rosen Bridge.” In the meantime, if you need help, just contact our
+                stellar support team—they’re more responsive than a DeLorean with a flux capacitor upgrade. Thanks for
+                your patience and understanding!
+            </p>
+            <h6>
+                – The DeLorean Team
+            </h6>
+        </section>
+
     </div>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
