--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -41,7 +41,8 @@
                 Ironically.
             </h5>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
-                <input type="email" id="email" placeholder="Enter your email" required>
+                <input type="email" id="email" placeholder="Enter your email"
+                name="email" required>
                 <input id="submit" type="submit" value="Get Started" class="btn">
             </form>
             <div class="advert">
@@ -95,7 +96,7 @@
         <section id="how">
             <h2>How does it work? (as if u actually believe)</h2>
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/OZSm4shR-M4?si=6jJ35jaP2xGW2f3G"
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/OZSm4shR-M4?si=6jJ35jaP2xGW2f3G"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -171,7 +172,7 @@
 
     </div>
     <footer>
-        
+
     </footer>
 </body>
 
