--- a/Project-5(final)/index.html
+++ b/Project-5(final)/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- todo :
+ change the cat photos to project screenshots
+ change and implement any animations for the main box -->
 <head>
     <meta charset="utf-8">
     <title>
